--- a/public/manifest.json
+++ b/public/manifest.json
@@ -49,10 +49,10 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#000000",
-  "background_color": "#000000",
-  "start_url": "https://homepage.tavin.xyz",
+  "id": "./index.html",
+  "start_url": "./index.html",
   "display": "standalone",
-  "id": "https://tavin.xyz",
-  "orientation": "landscape"
+  "orientation": "landscape",
+  "theme_color": "#000000",
+  "background_color": "#000000"
 }
