--- a/public/manifest.json
+++ b/public/manifest.json
@@ -49,8 +49,7 @@
       "type": "image/png"
     }
   ],
-  "id": "./index.html",
-  "start_url": "./index.html",
+  "start_url": "/index.html",
   "display": "standalone",
   "orientation": "landscape",
   "theme_color": "#000000",
